--- a/assignment/pom.xml
+++ b/assignment/pom.xml
@@ -115,5 +115,14 @@ Sling-Initial-Content: \
             <version>1.4.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
+
     </dependencies>
 </project>
