--- a/com.ttn.bootcamp.training/pom.xml
+++ b/com.ttn.bootcamp.training/pom.xml
@@ -502,6 +502,15 @@
     <!-- ====================================================================== -->
     <dependencyManagement>
         <dependencies>
+
+            <!-- https://mvnrepository.com/artifact/org.apache.sling/org.apache.sling.scripting.sightly -->
+            <dependency>
+                <groupId>org.apache.sling</groupId>
+                <artifactId>org.apache.sling.scripting.sightly</artifactId>
+                <version>1.3.2-1.4.0</version>
+                <scope>provided</scope>
+            </dependency>
+
             <!-- OSGi Dependencies -->
             <dependency>
                 <groupId>org.osgi</groupId>
